# kcheckgmail

./: AUTHORS  AdditionalInfo.txt  CMakeLists.txt  COPYING  ChangeLog  ConfigureChecks.cmake  Doxyfile  INSTALL  Makefile.am  Makefile.cvs  Makefile.in  README  TODO  acinclude.m4  aclocal.m4  config.h.cmake  configure  configure.in  configure.in.in  kcheckgmail.1  kcheckgmail.kdev4  kcheckgmail.kdevelop  man-kcheckgmail.1.docbook
admin/: acinclude.m4.in  cvs.sh
debian/: README.Debian  changelog  control  copyright  manpages  menu  rules  watch
debian/_pending/: kcheckgmail.doc-base.EX
debian/additions/: kcheckgmail.1
debian/patches/: kubuntu_01_authentication_problem_fix.diff
doc/: CMakeLists.txt  Makefile.am  Makefile.in
doc/en/: CMakeLists.txt  Makefile.am  Makefile.in  index.docbook
icons/: CMakeLists.txt  Makefile.am  Makefile.in
icons/svg/: convert-all.sh
po/: CMakeLists.txt  Makefile.in  ar.po  ca.po  cs.po  da.po  de.po  el.po  es.po  et.po  fr.po  hu.po  it.po  it_IT.po  kcheckgmail.pot  kcheckgmail.pot.ignore  ko.po  lt.po  maketrans  mergetrans  pl.po  pt.po  pt_BR.po  ru.po  sk.po  sv.po  tr.po  wa.po  zh_CN.po
src/: CMakeLists.txt  Makefile.am  Makefile.in  advancedsettingsbase.ui  advancedsettingswidget.ui  appearancesettingsbase.ui  appearancesettingswidget.ui  appletsettingsbase.ui  appletsettingswidget.ui  configdialog.cpp  configdialog.h  eventsrc  gmail.cpp  gmail.h  gmail_constants.h  gmailparser.cpp  gmailparser.h  gmailwalletmanager.cpp  gmailwalletmanager.h  jsprotocol.cpp  jsprotocol.h  kcheckgmail.desktop  kcheckgmail.lsm  kcheckgmail.notifyrc  kcheckgmailapp.cpp  kcheckgmailapp.h  kcheckgmailcore.cpp  kcheckgmailcore.h  kcheckgmailcore_p.h  kcheckgmailiface.h  kcheckgmailtray.cpp  kcheckgmailtray.h  knotification.cpp  knotification.h  loginsettingsbase.ui  loginsettingswidget.ui  mailcounter.cpp  mailcounter.h  main.cpp  netsettingsbase.ui  (+4 more)
templates/: cpp  h
